# 02582_CDA_Case2

./: .gitignore  Case_II.ipynb  README.md  pyproject.toml
notebooks/: PCA_exploration.ipynb  exploratory_clustering_k.ipynb  exploratory_data_analysis.ipynb  losoCV_GMM.ipynb  losoCV_Kmeans.ipynb  loso_cv.ipynb  loso_cv_individuals.ipynb  loso_cv_teams.ipynb
outputs/outputs_PCA/results/: mapped_classification_report_k3.txt
outputs/results/: cluster_phase_counts.csv  cluster_phase_counts_k4.csv  cluster_phase_normalized.csv  cluster_phase_normalized_k3.csv  cluster_to_phase_mapping.json  gmm_aic_bic_scores.csv  hr_data_with_clusters.csv  hr_data_with_clusters_k3.csv  mapped_classification_report.txt  metrics_summary.json  metrics_summary_k4.json  missingness_report.csv  pca_variance_table.csv
outputs/results/gmm/: cluster_phase_counts.csv  cluster_phase_counts_k3.csv  cluster_phase_normalized.csv  cluster_phase_normalized_k4.csv  cluster_to_phase_mapping.json  cluster_to_phase_mapping_k3.json  cluster_to_phase_mapping_k4.json  gmm_aic_bic_scores.csv  (+6 more)
outputs_loso_k2/results/: loso_gmm_candidate_scores.csv  loso_summary.json
outputs_loso_k3/results/: loso_summary.json
outputs_loso_k4/results/: loso_test_predictions.csv
src/: run_pipeline.py
src/physio_pipeline/: __init__.py  clustering.py  config.py  data_io.py  evaluation.py  model_selection.py  pca_stage.py  pipeline.py  preprocessing.py  visualization.py
tests/: test_evaluation.py  test_feature_selection.py  test_gmm_selection.py  test_pca_selection.py  test_within_individual_scaling.py
(+18 files in other folders)
