[project]
name = "02582-cda-case2"
version = "0.1.0"
description = "02582 CDA Case 2 project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
